WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176036
CanvasCaptureMediaStreamTrack clone is not a CanvasCaptureMediaStreamTrack
https://bugs.webkit.org/show_bug.cgi?id=176036
Summary
CanvasCaptureMediaStreamTrack clone is not a CanvasCaptureMediaStreamTrack
youenn fablet
Reported
2017-08-28 15:08:29 PDT
It is a regular MediaStreamTrack with no functionality
Attachments
Patch
(8.25 KB, patch)
2017-08-28 15:14 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-08-28 15:14:41 PDT
Created
attachment 319214
[details]
Patch
WebKit Commit Bot
Comment 2
2017-08-29 10:43:54 PDT
Comment on
attachment 319214
[details]
Patch Clearing flags on attachment: 319214 Committed
r221305
: <
http://trac.webkit.org/changeset/221305
>
WebKit Commit Bot
Comment 3
2017-08-29 10:43:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-08-29 10:44:52 PDT
<
rdar://problem/34136003
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug