CanvasCaptureMediaStreamTrack clone is not a CanvasCaptureMediaStreamTrack https://bugs.webkit.org/show_bug.cgi?id=176036

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-29
Reviewed by Eric Carlson.

Source/WebCore:

Covered by existing tests.

Instead of creating a MediaStreamTrack clone when cloning a CanvasCaptureMediaStreamTrack,
we are now creating a CanvasCaptureMediaStreamTrack.
This allows exposing the expected methods and having the expected functionality.

* Modules/mediastream/CanvasCaptureMediaStreamTrack.cpp:
(WebCore::CanvasCaptureMediaStreamTrack::clone):
* Modules/mediastream/CanvasCaptureMediaStreamTrack.h:
* Modules/mediastream/MediaStreamTrack.cpp:
(WebCore::MediaStreamTrack::clone):
* Modules/mediastream/MediaStreamTrack.h:

LayoutTests:

* fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track-expected.txt:
* fast/mediastream/captureStream/canvas2d.html:
* fast/mediastream/captureStream/canvas2d-expected.txt:

Canonical link: https://commits.webkit.org/192734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221305 268f45cc-cd09-0410-ab3c-d52691b4dbfc